added product read feature
