# src/components/product/product.router.ts
@@ -2,12 +2,15 @@ import { Router } from 'express';
 import protectedByApiKey from '@core/middlewares/apiKey.middleware';
 import validation from '@core/middlewares/validate.middleware';
 import createProductValidation from './createProduct.validation';
-import { createProd } from './product.controller';
+import { createProd, readProd } from './product.controller';
 
 const router: Router = Router();
 
-// routes to be added
+// get routes
 
+router.get('/product/read/:id', [protectedByApiKey], readProd);
+
+// post routes
 router.post(
   '/product/create',
   [protectedByApiKey, validation(createProductValidation)],
